7.HashMap/out.txt
   Compiling HashMap v0.1.0 (/workspace/rust_language_start/7.HashMap)
error[E0308]: mismatched types
  --> src/main.rs:81:5
   |
81 | /     match input_char("quit? (Y/N)"){
82 | |         'Y' | 'y' => true,
83 | |         'N' | 'n' => false,
84 | |         _ => {
...  |
87 | |         },
88 | |     }
   | |     ^- help: consider using a semicolon here
   | |_____|
   |       expected `()`, found `bool`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `HashMap` due to previous error
